fix: RSS-PZ-18 Make Translation Hint Visible With First Launch

--- a/rss-puzzle/src/index.css
+++ b/rss-puzzle/src/index.css
@@ -276,10 +276,6 @@ button.disabled,
   visibility: hidden;
 }
 
-.hint-translation-sentence_showed {
-  visibility: visible;
-}
-
 .image-translation {
   opacity: 0.8;
   cursor: pointer;
